Fixed the responsiveness of about and technical skills sections

--- a/index.html
+++ b/index.html
@@ -88,70 +88,76 @@
                 </ul>
             </li>
             <li class="menu-item"><a class="item" target="_blank" href="assets/resume.pdf">Resume</a></li>
-            <li class="menu-item"><a class="item" href="">Contact</a></li>
+            <li class="menu-item"><a class="item" href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
-    <section id="bg2" class="">
-        <section id="About">
+    <section id="About">
 
+        <br>
 
-            <h1> About Me</h1>
-            <hr />
-            <p> Hi, I'm Jack! I'm a student at Plymouth University, Devon studying Computing & Games Development, with an interest in full-stack development.
-                <br /> I have three years of experience developing single player games in 2D and 3D within the Unity Engine, developing both 2D and 3D games throughout that time.
-                <br /> I also have a year of basic Java experience, developing mock applications for real world use cases such as a patient management system.
-            </p>
-            <!--<img class="mugshot circle" src="assets/images/bg1.jpeg" alt="Image cannot be shown." height="200" width="200"> -->
-        </section>
-        <section id="Skills">
-
-            <header>
-                <h1>Technical Skills</h1>
-            </header>
-            <hr width="250px" />
-            <div class="Skills">
-
-                <!-- REMINDER: Switch this to using Tables: https://www.w3schools.com/html/html_tables.asp-->
-                <div class="Tools">
-                    <h2> Tools</h2>
-                    <ul>
-                        <li> Unity Engine </li>
-                        <li> SteamVR</li>
-                        <li> HtmlAgilityPack </li>
-                    </ul>
-                </div>
-                <div class="Software">
-                    <h2> Software</h2>
-                    <ul>
-                        <li> Windows & Linux</li>
-                        <li> Git</li>
-                        <li> Blender</li>
-                        <li> 3DS Max </li>
-                        <li> Adobe Photoshop</li>
-
-
-                    </ul>
-                </div>
-                <div class="Languages">
-                    <h2> Languages</h2>
-                    <ul>
-                        <li> C#</li>
-                        <li> C++</li>
-                        <li> Javascript</li>
-                        <li> Java</li>
-
-                    </ul>
-                </div>
+        <h1> About Me</h1>
+        <hr />
+        <div class="grid-container">
+            <img class="mugshot circle about1 " src="assets/images/placeholderimg.png" alt="Picture of me!" height="200" width="200">
+            <div class="about2">
+                <h2> About </h2>
+                <p> Hi, I'm Jack! I'm a student at the university of Plymouth, studying Computing & Games Development, with an interest in full-stack development. I have three years of experience developing single player games in 2D and 3D within the Unity
+                    Engine, developing both 2D and 3D games throughout that time. I also have a year of basic Java experience, developing mock applications for real world use cases such as a patient management system.
+                </p>
             </div>
+            <div class="about3">
+                <h2> My interests... </h2>
+                <p> Outside of programming, I have other interests - As you can imagine, with a background in games development, I enjoy playing video games. I'm not picky, I enjoy twitch shooters such as Counter Strike, to RPG games such as Skyrim.
+                </p>
 
-        </section>
+            </div>
+        </div>
+    </section>
+    <section id="Skills">
+
+
+        <h1>Technical Skills</h1>
+        <hr width="250px" />
+        <div class="Skills grid-container">
+
+            <div class="grid-item">
+                <h2> Tools</h2>
+                <ul>
+                    <li> Unity Engine </li>
+                    <li> SteamVR</li>
+                    <li> HtmlAgilityPack </li>
+                </ul>
+            </div>
+            <div class="grid-item">
+                <h2> Software</h2>
+                <ul>
+                    <li> Windows & Linux</li>
+                    <li> Git</li>
+                    <li> Blender</li>
+                    <li> 3DS Max </li>
+                    <li> Adobe Photoshop</li>
+
+
+                </ul>
+            </div>
+            <div class="grid-item">
+                <h2> Languages</h2>
+                <ul>
+                    <li> C#</li>
+                    <li> C++</li>
+                    <li> Javascript</li>
+                    <li> Java</li>
+
+                </ul>
+            </div>
+        </div>
 
     </section>
     <!-- End Skills Section-->
 
 
-    <section class="pagecontainer" id="university">
+    <section class="" id="university">
 
         <h1> University Projects</h1>
 
