Fixed contact form to actually send data to my email

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </ul>
             </li>
             <li class="menu-item"><a class="item" target="_blank" href="assets/resume.pdf">Resume</a></li>
-            <li class="menu-item"><a class="item" href="contact.html">Contact</a></li>
+            <li class="menu-item"><a class="item" href="#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -108,7 +108,8 @@
             </div>
             <div class="about3">
                 <h2> My interests... </h2>
-                <p> Outside of programming, I have other interests - As you can imagine, with a background in games development, I enjoy playing video games. I'm not picky, I enjoy twitch shooters such as Counter Strike, to RPG games such as Skyrim.
+                <p> Outside of programming, I have other interests - As you can imagine, with a background in games development, I enjoy playing video games. I'm not picky, I enjoy twitch shooters such as Counter Strike, to RPG games such as Skyrim. I also
+                    enjoy building computers
                 </p>
 
             </div>
@@ -347,7 +348,46 @@
         </div>
 
     </section>
-    <footer></footer>
+
+    <section id="contact">
+        <h1> Want more information? </h1>
+        <h1> Contact me here: </h1>
+
+        <div class="">
+
+            <div class="formdiv">
+
+                <form id="contactform" action="mailto:jackfletch4@gmail.com" method="POST" enctype="text/plain">
+                    <br>
+                    <input type="text" id="lname" placeholder="Please enter your name here." name="lname" size=44>
+                    <br>
+                    <br>
+                    <input type="email" required placeholder="Enter a valid email address" id="email" size="44" name="email"><br>
+                    <br>
+                    <textarea rows="4" cols="45" name="message" placeholder="Please enter your message here."></textarea>
+                    <br> <input type="submit" name="submit" value="Submit"><br>
+                </form>
+                <hr>
+
+                <h2>
+                    Contact Information
+                </h2>
+
+                <div> <img>
+                    <p> Plymouth, Devon </p>
+                </div> <br>
+
+                <div> <img>
+                    <p> Jackfletch4@gmail.com </p>
+                </div> <br>
+            </div>
+
+        </div>
+
+    </section>
+    <footer> © 2020 Jack Fletcher
+
+    </footer>
 </body>
 
 </html>
