Added title tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <html>
 
 <head>
+    <title> Jack Fletcher's Portfolio Site</title>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158683896-1"></script>
     <script>
@@ -19,7 +21,6 @@
     </script>
 
     <link rel='stylesheet' type='text/css' href='stylesheet.css' />
-
 </head>
 
 <body>
