Removed unnecessary section of contact info and added image of myself

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <h1> About Me</h1>
         <hr />
         <div class="grid-container">
-            <img class="mugshot circle about1 " src="assets/images/placeholderimg.png" alt="Picture of me!" height="200" width="200">
+            <img class="mugshot circle about1 " src="assets/images/me.jpg" alt="Picture of me!" height="240" width="320">
             <div class="about2">
                 <h2> About </h2>
                 <p> Hi, I'm Jack! I'm a student at the university of Plymouth, studying Computing & Games Development, with an interest in full-stack development. I have three years of experience developing single player games in 2D and 3D within the Unity
@@ -368,19 +368,8 @@
                     <textarea rows="4" cols="45" name="message" placeholder="Please enter your message here."></textarea>
                     <br> <input type="submit" name="submit" value="Submit"><br>
                 </form>
-                <hr>
 
-                <h2>
-                    Contact Information
-                </h2>
 
-                <div> <img>
-                    <p> Plymouth, Devon </p>
-                </div> <br>
-
-                <div> <img>
-                    <p> Jackfletch4@gmail.com </p>
-                </div> <br>
             </div>
 
         </div>
