Added latest portfolio report

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 <a class="item" href="#papers">Papers</a>
                 <ul>
                     <li class="submenu-item"><a target="_blank" href="assets/papers/ProceduralMapGen.pdf">Procedural Map Generation in Video Games </a></li>
+                    <li class="submenu-item"><a target="_blank" href="assets/papers/NecroReport.pdf">Necromancer-Game VR Report & Post-mortem </a></li>
                 </ul>
             </li>
             <li class="menu-item"><a class="item" target="_blank" href="assets/resume.pdf">Resume</a></li>
@@ -110,7 +111,7 @@
             <div class="about3">
                 <h2> My interests... </h2>
                 <p> Outside of programming, I have other interests - As you can imagine, with a background in games development, I enjoy playing video games. I'm not picky, I enjoy twitch shooters such as Counter Strike, to RPG games such as Skyrim. I also
-                    enjoy building computers
+                    enjoy building and tweaking computers, starting with getting more performance by overclocking the Core 2 Duo generation, to changing ram timings to eke more performance out of my 3700X.
                 </p>
 
             </div>
@@ -150,6 +151,7 @@
                     <li> C++</li>
                     <li> Javascript</li>
                     <li> Java</li>
+                    <li> Python </li>
 
                 </ul>
             </div>
@@ -255,11 +257,11 @@
                 <div class="card__content ">
 
                     <p>
-                        A mixture between RPG and Tower Defence elements in VR, the player has to interact with villagers to secure information regarding body parts they can use to create units.
+                        A mixture between RPG and Tower Defence elements in Unity VR, the player has to interact with villagers to secure information regarding body parts they can use to create units.
                     </p>
 
                     <p>
-                        As this is a solo project, I'm dealing with all systems and project management.
+                        As this is a solo project, I dealt with all systems and project management.
                     </p>
                 </div>
 
@@ -304,7 +306,7 @@
 
                 <img src="assets/images/discord.png" alt=" " class="card__image ">
 
-                <div class="card__title"> Discord Bot</div>
+                <div class="card__title"> SharpBot</div>
 
                 <div class="card__content ">
 
