--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             <img class="mugshot circle about1 " src="assets/images/me.jpg" alt="Picture of me!" height="240" width="320">
             <div class="about2">
                 <h2> About </h2>
-                <p> Hi, I'm Jack! I'm a student at the university of Plymouth, studying Computing & Games Development, with an interest in full-stack development. I have three years of experience developing single player games in 2D and 3D within the Unity
-                    Engine, developing both 2D and 3D games throughout that time. I also have a year of basic Java experience, developing mock applications for real world use cases such as a patient management system.
+                <p> Hi, I'm Jack! I'm a student at the university of Plymouth, studying Computing & Games Development. I have three years of experience developing single player games in 2D and 3D within the Unity
+                    Engine I also have a year of Java experience, developing mock applications for real world use cases such as a patient management system.
                 </p>
             </div>
             <div class="about3">
