--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
         <!-- Title-->
-        <h1 class="title">
+        <h1 class="title fade-in">
             I'm Jack Fletcher.
             <br /> <a style="color: white" id="titleHover" href="#navigation">Software Engineer and Game Designer.</a>
             <hr />
