--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 
         <div id="about" class="section box-shadow">
             <div class="inner-container">
-                <h1> About Me </h1>
-                <p class="text">
+                <h1 class="section-title"> About Me </h1>
+                <p class="section-text">
                 Hi, I'm Jack! I'm a games programmer with experience developing 2D and 3D games in Unity. 
                 My background is in games development, with a focus on programming.
                 I love to learn anything I can about software and admire the methods programmers used to save on
@@ -130,26 +130,27 @@
             </div>
         </div>
 
-        <div style="background-color: #BBD9EE" id="education" class="section box-shadow">
+        <div id="education" class="section box-shadow">
             <img style="margin-left: 10px" class="flex-img" src="assets/img/hoe.jpg" alt="bgimg" style="width:100%"> 
-            <div style="background-color: #BBD9EE" class="inner-container">
-                <h1> Education </h1>
-                <p class="text">
+            <div class="inner-container">
+                <h1 class="section-title"> Education </h1>
+                <p class="section-text">
                     I graduated from the University of Plymouth in August 2020, achieving a 2:1 in Computing & Games Development. 
                     Some of my achievements were creating an anti TD-style VR game known as 'Necromancer Game VR', a 3D, procedurally generated Dungeon Crawler known as 'Dhelve' and a 2D commercial application for Plymouth Energy Community, 
                     aimed to show causation between actions a homeowner takes
                     and the effects of damp and mould.
+                    I am currently undertaking a part-time masters in Computer Science at Staffordshire University.
                 </p>
             </div>
         </div>
 
         <div id="projects"> </div>
 
-        <div style="background-color: white" id="necromancer-game-vr" class="section box-shadow">
+        <div id="necromancer-game-vr" class="section box-shadow">
           <img style="margin-left: 10px" class="flex-img" src="assets/img/necromancer.png" alt="bgimg"> 
-          <div style="background-color: white" class="inner-container">
-              <h1> Necromancer Game VR </h1>
-              <p class="text">
+          <div class="inner-container">
+              <h1 class="section-title"> Necromancer Game VR </h1>
+              <p class="section-text">
                 Necromancer Game-VR was a solo project developed in three months using Unity, C# and XML for serialization. It aimed to mix Tower-Defence and RPG elements together within virtual reality to create an immersive experience. As my first foray into VR development, 
                 it was used to learn more about emergent technologies and develop my ability to rapidly upskill to meet demands.
               </p>
@@ -159,11 +160,11 @@
           </div>
          </div>
 
-         <div style="background-color: #BBD9EE" id="dhelve" class="section box-shadow">
+         <div id="dhelve" class="section box-shadow">
           <img style="margin-left: 10px" class="flex-img" src="assets/img/dhelve.png" alt="bgimg"> 
-          <div style="background-color: #BBD9EE" class="inner-container">
-              <h1> Dhelve </h1>
-              <p class="text">
+          <div class="inner-container">
+              <h1 class="section-title"> Dhelve </h1>
+              <p class="section-text">
                 Dhelve is a 3D, procedurally generated dungeon crawler built in Unity in a team of two. I dealt with most game systems, including movement, enemy AI and spawning, shop system and player stats.
               </p>
 
@@ -172,11 +173,11 @@
           </div>
          </div>
 
-         <div style="background-color: white" id="pec-app" class="section box-shadow">
+         <div  id="pec-app" class="section box-shadow">
           <img style="margin-left: 10px" class="flex-img" src="assets/img/pec-app.png" alt="bgimg"> 
-          <div style="background-color: white" class="inner-container">
-              <h1> Damp and Mould Application </h1>
-              <p class="text">
+          <div  class="inner-container">
+              <h1 class="section-title"> Damp and Mould Application </h1>
+              <p class="section-text">
                 The Damp and Mould Application was a program developed for Plymouth Energy Community as a team of three in three months. Built in Unity, It was intended to be used alongside a PEC agent as a visual aid when visiting homeowners. 
               </p>
 
@@ -185,9 +186,9 @@
           </div>
          </div>
 
-        <div style="background-color: #EBF4FA" id="contact" class="section box-shadow">
-            <div style="background-color: #EBF4FA"class="inner-container center">
-                <h1> Want to talk more? </h1>
+        <div  id="contact" class="section box-shadow">
+            <div class="inner-container center">
+                <h1 class="section-title"> Want to talk more? </h1>
                 <span>
                     <a target="_blank" href="https://twitter.com/JackFle07795733"> <i class="fab fa-twitter fa-4x"></i> </a>
                 </span>
@@ -198,7 +199,7 @@
                     <a target="_blank"href="https://www.linkedin.com/in/jack-fletcher-977755171/"> <i class="fab fa-linkedin-in fa-4x"></i></a>
                 </span>
                 <span>
-                    <a href="mailto:jackfletch4@gmail.com"><i class="fas fa-envelope fa-4x"></i> </a>
+                    <a href="mailto:dev@jack-fletcher.me"><i class="fas fa-envelope fa-4x"></i> </a>
                 </span>
             </div>
         </div>
